--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -159,7 +159,7 @@
 
 \newcommand{\support}{\ensuremath{\mathit{supp}}}
 
-\newcommand{\track}{\ensuremath{pt}}
+\newcommand{\track}{\ensuremath{\mathit{pt}}}
 
 % Automorphism tool 
 \newcommand{\bliss}{\texttt{bliss}}
