--- a/algo/cdcl_sym_sp.tex
+++ b/algo/cdcl_sym_sp.tex
@@ -78,7 +78,7 @@
 		\tcp*{$\varphi$ is $\sat$}
 	}
 	\caption{The {\cdclsymsp} algorithm. Additions derived
-		from {\cdclsym} and {\cdclsp} are reported in red and blue (or grey). Additions
+		from {\cdclsym} and {\cdclsp} are reported in red and blue (or gray). Additions
 		due to the composition of the two algorithms are reported with a gray
 		background.}
 	\label{algo:cdclSYMSP}
